scrollbarsdir = $(pkgdatadir)/gtk-2.0/scrollbars
dist_scrollbars_DATA =							\
	slider-horiz-active.png						\
	slider-horiz.png						\
	slider-vert-active.png						\
	slider-vert.png							\
	stepper-down-active.png						\
	stepper-down.png						\
	stepper-left-active.png						\
	stepper-left.png						\
	stepper-right-active.png					\
	stepper-right.png						\
	stepper-up-active.png						\
	stepper-up.png							\
	trough-scrollbar-horiz.png					\
	trough-scrollbar-vert.png
